--- a/Sprint2/Algoritmos/Site/graficos/graficos.html
+++ b/Sprint2/Algoritmos/Site/graficos/graficos.html
@@ -28,7 +28,8 @@
         <a href="../Tela_Perfil/tela_perfil.html"><img src="../Tela_Perfil/perfil.png" alt="foto de perfil"></a>
       </div>
       <li> <a href="../Simulador_Financeiro/simulador.html">🖥Calculadora Financeira</a></li>
-      <li> <a href="../graficos/tela_Dash2.0.html">📊Gráficos</a></li>
+      <li> <a href="../graficos/graficos.html">📊Gráficos</a></li>
+      <li> <a href="../dashboard/dashboard.html">Dash</a></li>
       <li> <a href="../login/login.html">Sair</a></li>
     </ul>
   </div>
