Arrumando bug do Hamburguer tela grafico

--- a/Sprint2/Algoritmos/Site/graficos/graficos.html
+++ b/Sprint2/Algoritmos/Site/graficos/graficos.html
@@ -22,6 +22,11 @@
       <li> <a href="../../Site/index/index.html#contato">Contato</a></li>
     </ul>
   </div>
+
+
+  <div class="tela" style="display: flex;">
+
+
   <div id="itens-laterais">
     <ul class="listaItens">
       <div id="fp" class="fotoPerfil">
@@ -33,6 +38,11 @@
       <li> <a href="../login/login.html">Sair</a></li>
     </ul>
   </div>
+
+
+  <div class="conteudo">
+
+
   <div class="box-title">
     <h2 class="title2"> GRAFICOS
       <h6 class="subtitle2">FLOWTECH</h6>
@@ -82,6 +92,7 @@
   </div>
   <br>
   <br>
+  
   <main class="container_switch">
 
     <div id="content1" class="content" style="display: none;"></div>
@@ -294,6 +305,11 @@
 
   <br>
    <a href="../../../ArqComp/index.html"><button class="temporeal">Tempo real</button></a>
+
+
+   </div>
+  </div>
+
 </body>
 
 </html>
