pré-preenchimento tela de perfil

--- a/Sprint2/Algoritmos/Site/Tela_Perfil/tela_perfil.html
+++ b/Sprint2/Algoritmos/Site/Tela_Perfil/tela_perfil.html
@@ -26,7 +26,8 @@
           <ul class="listaItens">
             <li> <a href="../Simulador_Financeiro/simulador.html">🖥Calculadora Financeira</a></li>
             <li> <a href="../graficos/graficos.html">📊Gráficos</a></li>
-            <li> <a href="../dashboard/dashboard.html">Dash</a></li>
+            <li> <a href="../dashboard/dashboard.html">📈Dash</a></li>
+            <li> <a href="../../Telas_Individuais/Tentativa-HeatMap/dashboard.html">🗺️Mapa de calor</a></li>
             <li> <a href="../login/login.html">Sair</a></li>
           </ul>
         </div>
@@ -40,26 +41,26 @@
           <div class="camposCima">
             <div class="nomeCompleto">
               Nome Completo <br />
-              <input placeholder="Fulano Lorem Ipsum" type="text" id="nomeCompleto" />
+              <input placeholder="Fulano Lorem Ipsum" type="text" id="nomeCompleto" value="Fulano de Tal" />
             </div>
             <div class="nascimento">
               Nascimento <br />
-              <input type="date" id="nascimento" />
+              <input type="date" id="nascimento" value="2024-05-09"/>
             </div>
             <div class="cpf">
               CPF <br />
-              <input placeholder="___.___.___-__" type="text" id="cpf" />
+              <input placeholder="___.___.___-__" type="text" id="cpf" value="12345678901" />
             </div>
           </div>
           <div class="camposBaixo">
             <div class="separacaoBotao">
               <div class="email">
                 E-mail <br />
-                <input placeholder="usuario@gmail.com" type="text" id="email" />
+                <input placeholder="usuario@gmail.com" type="text" id="email" value="fulanotal@gmail.com"/>
               </div>
               <div class="telefone">
                 Telefone <br />
-                <input placeholder="(11) 99999-8888" type="text" id="telefone" />
+                <input placeholder="(11) 99999-8888" type="text" id="telefone" value="11 99999-8888"/>
               </div>
             </div>
               <div class="botoes">
