pré-preenchimento dos campos da tela de perfil

--- a/Sprint2/Algoritmos/Site/Tela_Perfil/tela_perfil.html
+++ b/Sprint2/Algoritmos/Site/Tela_Perfil/tela_perfil.html
@@ -40,26 +40,26 @@
           <div class="camposCima">
             <div class="nomeCompleto">
               Nome Completo <br />
-              <input placeholder="Fulano Lorem Ipsum" type="text" id="nomeCompleto" />
+              <input placeholder="Fulano Lorem Ipsum" type="text" id="nomeCompleto" value="João da Silva"/>
             </div>
             <div class="nascimento">
               Nascimento <br />
-              <input type="date" id="nascimento" />
+              <input type="date" id="nascimento" value="2000-05-09"/>
             </div>
             <div class="cpf">
               CPF <br />
-              <input placeholder="___.___.___-__" type="text" id="cpf" />
+              <input placeholder="___.___.___-__" type="text" id="cpf" value="12345678910"/>
             </div>
           </div>
           <div class="camposBaixo">
             <div class="separacaoBotao">
               <div class="email">
                 E-mail <br />
-                <input placeholder="usuario@gmail.com" type="text" id="email" />
+                <input placeholder="usuario@gmail.com" type="text" id="email" value="joaoS@gmail.com"/>
               </div>
               <div class="telefone">
                 Telefone <br />
-                <input placeholder="(11) 99999-8888" type="text" id="telefone" />
+                <input placeholder="(11) 99999-8888" type="text" id="telefone" value="11 98765-4321"/>
               </div>
             </div>
               <div class="botoes">
