adicionando link para heatmap na pg da dash e na pg graficos

--- a/Sprint2/Algoritmos/Site/heatmap/heatmap.html
+++ b/Sprint2/Algoritmos/Site/heatmap/heatmap.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FlowTech | DashBoard</title>
+  <title>FlowTech | HeatMap</title>
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
   <link rel="stylesheet" href="Dash.css">
   <script src="heatmap.js"></script>
@@ -35,7 +35,7 @@
           <li>🖥Calculadora Financeira</li>
           <li> DeshBoard</li>
           <li> Gráficos </li>
-          <li>🗺️Mapa de calor</li>
+          <li>🗺️ Mapa de calor</li>
           <li>Sair</li>
         </ul>
       </div>
