--- a/Sprint2/Algoritmos/Site/dashboard/dashboard.html
+++ b/Sprint2/Algoritmos/Site/dashboard/dashboard.html
@@ -30,6 +30,7 @@
       <li> <a href="../Simulador_Financeiro/simulador.html">🖥Calculadora Financeira</a></li>
       <li> <a href="../graficos/graficos.html">📊Gráficos</a></li>
       <li> <a href="../dashboard/dashboard.html">Dash</a></li>
+      <li> <a href="../heatmap/heatmap.html">🗺️ Mapa de calor </a></li>
       <li> <a href="../login/login.html">Sair</a></li>
     </ul>
   </div>
