Parte 2 da padronização dos sites Ainda há mais a ser feito

--- a/Sprint2/Algoritmos/Site/Simulador_Financeiro/simulador.html
+++ b/Sprint2/Algoritmos/Site/Simulador_Financeiro/simulador.html
@@ -20,7 +20,7 @@
               <li>|</li>
               <li> <a href="../index/index.html#contato">Contato</a></li>
               <li>|</li>
-              <li> <a href="../Simulador_Financeiro/calculadoraFincanceira- final.html">Simulador Financeiro</a></li>
+              <li> <a href="../Simulador_Financeiro/calculadoraFincanceira- final.html"><u>Simulador Financeiro</u></a></li>
               <a href="../cadastro/cadastro.html"><li class="bt" > CADASTRAR-SE</li></a>
               <a href="../login/login.html"><li class="bt"> LOGIN</li></a>                       
           </ul>
