--- a/Sprint2/Algoritmos/Site/cadastro/cadastro.html
+++ b/Sprint2/Algoritmos/Site/cadastro/cadastro.html
@@ -13,18 +13,24 @@
 </head>
 
 <body>
-    <nav>
-        <div class="container">
-            <a class="titulo" href="#"><div class="tituloNav">FLOWTECH</div></a>
-            <div class="navbar">
-                <ul>
-                    <li><a href="../index/index.html">Home</a></li>
-                    |
-                    <li>Ajuda</li>
-                </ul>
-            </div>
+    <div class="header1">
+        <div class="container1">
+    
+            <h1 class="titulo1">FLOWTECH</h1>
+        
+          <ul class="navbar1">
+              <li> <a href="../index/index.html">Inicio</a></li>
+              <li>|</li>
+              <li> <a href="../index/index.html">Quem somos?</a></li>
+              <li>|</li>
+              <li> <a href="../index/index.html">Contato</a></li>
+              <li>|</li>
+              <li> <a href="../Simulador_Financeiro/simulador.html">Simulador Financeiro</a></li>
+              <a href="../cadastro/cadastro.html"><li class="bt1"> CADASTRAR-SE</li></a>
+              <a href="../login/login.html"><li class="bt1">LOGIN</li></a>       
+          </ul>
         </div>
-    </nav>
+      </div>
 
     <div id="telaCadastro" class="telaCadastro">
             <div class="container">
