--- a/Sprint2/Algoritmos/Site/dashboard/dashboard.html
+++ b/Sprint2/Algoritmos/Site/dashboard/dashboard.html
@@ -24,8 +24,8 @@
           <li> <a href="../index/index.html">Contato</a></li>
           <li>|</li>
           <li> <a href="../Simulador_Financeiro/simulador.html">Simulador Financeiro</a></li>
-          <a href="../cadastro/cadastro.html"><li class="bt1"> CADASTRAR-SE</li></a>
-          <a href="../login/login.html"><li class="bt1">LOGIN</li></a>       
+          <li>|</li>
+          <li> <a href="../index/index.html"><u>Dashboard</u></a></li>
       </ul>
     </div>
   </div>
