--- a/Sprint2/Algoritmos/Site/heatmap/heatmap.html
+++ b/Sprint2/Algoritmos/Site/heatmap/heatmap.html
@@ -33,7 +33,7 @@
             <a href="../Tela_Perfil/tela_perfil.html"><img src="../../Site/Tela_Perfil/perfil.png" alt="foto de perfil"></a>
           </div>
           <li>🖥Calculadora Financeira</li>
-          <li> DeshBoard</li>
+          <li> DashBoard</li>
           <li> Gráficos </li>
           <li>🗺️ Mapa de calor</li>
           <li>Sair</li>
