--- a/Sprint2/Algoritmos/Site/login/login.html
+++ b/Sprint2/Algoritmos/Site/login/login.html
@@ -166,9 +166,9 @@
 <script>
     // Variáveis declaradas como globais para uso em diferentes funções. Todos começam nulo;
     var codigo; // Ainda não utilizado, código de acesso no cadastro;
-    var email_cad = input_email_cad.value; // Email inserido no cadastro;
+    var email_cad = "....."; // Email inserido no cadastro;
     var cpf_cad = input_cpf.value; // CPF inserido no cadastro;
-    var senha_cad = input_senha_cad.value; // Senha inserido no cadastro;
+    var senha_cad = "...."; // Senha inserido no cadastro;
     var nome_cad = input_nome.value; // Nome inserido no cadastro;
     var nascimento_cad = input_nascimento.value; // Data nascimento inserido no cadastro;
     var telefone_cad = input_telefone.value; // Telefone inserido no cadastro;
@@ -176,6 +176,7 @@
     var email_red = input_Remail.value; // Email para redefinir senha;
     var NovaSenha = input_NovaSenha.value; // Senha redefinida;
     var codigo_recuperar_senha = '' // Código gerado aleatóriamente para redefinir senha;
+
 
     // Ao clicar em "Cadastrar";
     function cadastrar(){
