pequenas mudanças nas navbars

--- a/Sprint2/Algoritmos/Site/index/index.html
+++ b/Sprint2/Algoritmos/Site/index/index.html
@@ -22,7 +22,7 @@
           <li>|</li>
           <li> <a href="../Simulador_Financeiro/simulador.html">Simulador Financeiro</a></li>
           <a href="../cadastro/cadastro.html"><li class="bt"> CADASTRAR-SE</li></a>
-          <li class="bt"> <a href="../login/login.html">LOGIN</a></li>       
+          <a  href="../login/login.html"><li class="bt">LOGIN</li><a>       
       </ul>
     </div>
   </div>
