--- a/Sprint2/Algoritmos/Site/cadastro/cadastro.html
+++ b/Sprint2/Algoritmos/Site/cadastro/cadastro.html
@@ -21,13 +21,11 @@
           <ul class="navbar1">
               <li> <a href="../index/index.html">Inicio</a></li>
               <li>|</li>
-              <li> <a href="../index/index.html">Quem somos?</a></li>
+              <li> <a href="../index/index.html#sobnos">Quem somos?</a></li>
               <li>|</li>
-              <li> <a href="../index/index.html">Contato</a></li>
+              <li> <a href="../index/index.html#contato">Contato</a></li>
               <li>|</li>
-              <li> <a href="../Simulador_Financeiro/simulador.html">Simulador Financeiro</a></li>
-              <a href="../cadastro/cadastro.html"><li class="bt1"> CADASTRAR-SE</li></a>
-              <a href="../login/login.html"><li class="bt1">LOGIN</li></a>       
+              <li> <a href="../Simulador_Financeiro/simulador.html">Simulador Financeiro</a></li>   
           </ul>
         </div>
       </div>
