--- a/Sprint2/Algoritmos/Site/dashboard/dashboard.html
+++ b/Sprint2/Algoritmos/Site/dashboard/dashboard.html
@@ -25,7 +25,7 @@
           <li>|</li>
           <li> <a href="../Simulador_Financeiro/simulador.html">Simulador Financeiro</a></li>
           <li>|</li>
-          <li> <a href="../index/index.html"><u>Dashboard</u></a></li>
+          <li> <a><u>Dashboard</u></a></li>
       </ul>
     </div>
   </div>
