padronizando tela Login e Cadastro

--- a/Sprint2/Algoritmos/Site/Tela_Perfil/tela_perfil.html
+++ b/Sprint2/Algoritmos/Site/Tela_Perfil/tela_perfil.html
@@ -24,9 +24,9 @@
       <div class="filho_hamburguer">
         <div id="hamburguer">
           <ul class="listaItens">
-            <li> <a href="../Simulador_Financeiro/simulador.html">🖥Calculadora Financeira</a></li>
-            <li> <a href="../graficos/graficos.html">📊Gráficos</a></li>
-            <li> <a href="../dashboard/dashboard.html">Dash</a></li>
+            <li> <a href="../Simulador_Financeiro/simulador.html">🖥 Calculadora Financeira</a></li>
+            <li> <a href="../graficos/graficos.html">📊 Gráficos</a></li>
+            <li> <a href="../dashboard/dashboard.html">🖥️ Dash</a></li>
             <li> <a href="../login/login.html">Sair</a></li>
           </ul>
         </div>
