--- a/Sprint2/Algoritmos/Site/dashboard/dashboard.html
+++ b/Sprint2/Algoritmos/Site/dashboard/dashboard.html
@@ -37,9 +37,9 @@
       <div id="fp" class="fotoPerfil">
         <a href="../Tela_Perfil/tela_perfil.html"><img src="../Tela_Perfil/perfil.png" alt="foto de perfil"></a>
       </div>
-      <li> <a href="../Simulador_Financeiro/simulador.html">🖥Calculadora Financeira</a></li>
-      <li> <a href="../graficos/graficos.html">📊Gráficos</a></li>
-      <li> <a href="../dashboard/dashboard.html">Dash</a></li>
+      <li> <a href="../Simulador_Financeiro/simulador.html">🖥 Calculadora Financeira</a></li>
+      <li> <a href="../graficos/graficos.html">📊 Gráficos</a></li>
+      <li> <a href="../dashboard/dashboard.html">🖥️ Dash</a></li>
       <li> <a href="../heatmap/heatmap.html">🗺️ Mapa de calor </a></li>
       <li> <a href="../login/login.html">Sair</a></li>
     </ul>
