--- a/Sprint2/Algoritmos/Site/index/index.html
+++ b/Sprint2/Algoritmos/Site/index/index.html
@@ -100,8 +100,8 @@
           </div> 
       </div>
       <div class="politica">
-        <p>Política de privacidade ></p>
-        <p>Política de cookies ></p>
+        <a href="../privacidade/privacidade.html"><p>Política de privacidade ></p></a>
+        <a href="../termo_uso/uso.html"><p>Termos de uso ></p></a>
       </div>
     </div>
     
