--- a/Sprint2/Algoritmos/Site/login/login.html
+++ b/Sprint2/Algoritmos/Site/login/login.html
@@ -111,9 +111,9 @@
                 </div>
 
                 <div class="links" id="termos">
-                    <a href="#">Política de Privacidade</a>
+                    <a href="../privacidade/privacidade.html">Política de Privacidade</a>
                     <span> | </span>
-                    <a href="#">Termos de Serviço</a>
+                    <a href="../termo_uso/uso.html">Termos de Uso</a>
                 </div>
             </div>
         </div>
