Adicionando titulo a heatmap

--- a/Sprint2/Algoritmos/Site/heatmap/heatmap.html
+++ b/Sprint2/Algoritmos/Site/heatmap/heatmap.html
@@ -49,6 +49,11 @@
         </h2>
       </div>
 
+      <select name="select_est" id="select_est" onchange="atualizar()">
+        <option value="Paulista">Paulista</option>
+        
+      </select>
+
       <div class="heatmap"></div>
     </div>
 
