Tela gráfico padronizada

--- a/Sprint2/Algoritmos/Site/dashboard/dashboard.html
+++ b/Sprint2/Algoritmos/Site/dashboard/dashboard.html
@@ -26,6 +26,10 @@
           <li> <a href="../Simulador_Financeiro/simulador.html">Simulador Financeiro</a></li>
           <li>|</li>
           <li> <a><u>Dashboard</u></a></li>
+          <li>|</li>
+          <li> <a href="../graficos/graficos.html">Gráficos</a></li>
+          <li>|</li>
+          <li> <a href="../heatmap/heatmap.html">Heatmap</a></li>
       </ul>
     </div>
   </div>
