--- a/Sprint2/Algoritmos/Site/graficos/graficos.html
+++ b/Sprint2/Algoritmos/Site/graficos/graficos.html
@@ -27,9 +27,9 @@
           <li>|</li>
           <li> <a href="../Simulador_Financeiro/simulador.html">Simulador Financeiro</a></li>
           <li>|</li>
-          <li> <a><u>Dashboard</u></a></li>
+          <li> <a href="../dashboard/dashboard.html"> Dashboard</a></li>
           <li>|</li>
-          <li> <a href="../graficos/graficos.html">Gráficos</a></li>
+          <li><a><u>Gráficos</u></a></li>
           <li>|</li>
           <li> <a href="../heatmap/heatmap.html">Heatmap</a></li>
       </ul>
