Mudanças para as navbars

--- a/Sprint2/Algoritmos/Site/Tela_Perfil/tela_perfil.html
+++ b/Sprint2/Algoritmos/Site/Tela_Perfil/tela_perfil.html
@@ -11,15 +11,28 @@
     <link rel="stylesheet" href="./perfil.css" />
   </head>
   <body>
-    <div class="container">
-      <span id="menuH" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
-      <h1 class="titulo">FLOWTECH</h1>
-      <ul class="itensNaveBar">
-        <li> <a href="../../Site/index/index.html">Início</a></li>
-        <li> <a href="../../Site/index/index.html#sobnos">Sobre nós</a></li>
-        <li> <a href="../../Site/index/index.html#contato">Contato</a></li>
-      </ul>
+    <div class="header1">
+      <div class="container1">
+        
+        <span id="menuH" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
+          <h1 class="titulo1">FLOWTECH</h1>
+      
+        <ul class="navbar1">
+            <li> <a href="../index/index.html">Inicio</a></li>
+            <li>|</li>
+            <li> <a style="text-decoration: underline;">Perfil</a></li>
+            <li>|</li>
+            <li> <a href="../Simulador_Financeiro/simulador.html">Simulador Financeiro</a></li>
+            <li>|</li>
+            <li> <a href="../dashboard/dashboard.html">Dashboard</a></li>
+            <li>|</li>
+            <li> <a href="../graficos/graficos.html">Gráficos</a></li>
+            <li>|</li>
+            <li> <a href="../heatmap/heatmap.html">Heatmap</a></li>
+        </ul>
+      </div>
     </div>
+    <div class="gap"></div>
     <div id="mae">
       <div class="filho_hamburguer">
         <div id="hamburguer">
