--- a/Sprint2/Algoritmos/Site/graficos/graficos.html
+++ b/Sprint2/Algoritmos/Site/graficos/graficos.html
@@ -21,9 +21,7 @@
       <ul class="navbar1">
           <li> <a href="../index/index.html">Inicio</a></li>
           <li>|</li>
-          <li> <a href="../index/index.html">Quem somos?</a></li>
-          <li>|</li>
-          <li> <a href="../index/index.html">Contato</a></li>
+          <li> <a href="../Tela_Perfil/tela_perfil.html">Perfil</a></li>
           <li>|</li>
           <li> <a href="../Simulador_Financeiro/simulador.html">Simulador Financeiro</a></li>
           <li>|</li>
