--- a/Sprint2/Algoritmos/Site/heatmap/heatmap.html
+++ b/Sprint2/Algoritmos/Site/heatmap/heatmap.html
@@ -13,17 +13,28 @@
 
 <body>
   
-  <div class="container">
-    <span id="menuH" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
-    <h1 class="titulo">FlowTech</h1>
-    <ul class="itensNaveBar">
-      <li> <a href="../../Site/index/index.html">Início</a></li>
-      <li>|</li>
-      <li> <a href="../../Site/index/index.html#sobnos">Sobre nós</a></li>
-      <li>|</li>
-      <li> <a href="../../Site/index/index.html#contato">Contato</a></li>
-    </ul>
+  <div class="header1">
+    <div class="container1">
+      
+      <span id="menuH" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
+        <h1 class="titulo1">FLOWTECH</h1>
+    
+      <ul class="navbar1">
+          <li> <a href="../index/index.html">Inicio</a></li>
+          <li>|</li>
+          <li> <a href="../Tela_Perfil/tela_perfil.html">Perfil</a></li>
+          <li>|</li>
+          <li> <a href="../Simulador_Financeiro/simulador.html">Simulador Financeiro</a></li>
+          <li>|</li>
+          <li> <a href="../heatmap/heatmap.html">Dashboard</a></li>
+          <li>|</li>
+          <li> <a href="../graficos/graficos.html">Gráficos</a></li>
+          <li>|</li>
+          <li> <a" href="../heatmap/heatmap.html"><u>Heatmap</u></a></li>
+      </ul>
+    </div>
   </div>
+  <div class="gap"></div>
 
   <div class="tela" style="display: flex;">
     <div id="itens-laterais">
