--- a/Sprint2/Algoritmos/Site/dashboard/dashboard.html
+++ b/Sprint2/Algoritmos/Site/dashboard/dashboard.html
@@ -19,9 +19,7 @@
       <ul class="navbar1">
           <li> <a href="../index/index.html">Inicio</a></li>
           <li>|</li>
-          <li> <a href="../index/index.html">Quem somos?</a></li>
-          <li>|</li>
-          <li> <a href="../index/index.html">Contato</a></li>
+          <li> <a href="../Tela_Perfil/tela_perfil.html">Perfil</a></li>
           <li>|</li>
           <li> <a href="../Simulador_Financeiro/simulador.html">Simulador Financeiro</a></li>
           <li>|</li>
@@ -41,9 +39,9 @@
       <div id="fp" class="fotoPerfil">
         <a href="../Tela_Perfil/tela_perfil.html"><img src="../Tela_Perfil/perfil.png" alt="foto de perfil"></a>
       </div>
-      <li> <a href="../Simulador_Financeiro/simulador.html">🖥 Calculadora Financeira</a></li>
-      <li> <a href="../graficos/graficos.html">📊 Gráficos</a></li>
-      <li> <a href="../dashboard/dashboard.html">🖥️ Dash</a></li>
+      <li> <a href="../Simulador_Financeiro/simulador.html">🖥Calculadora Financeira</a></li>
+      <li> <a href="../graficos/graficos.html">📊Gráficos</a></li>
+      <li> <a href="../dashboard/dashboard.html">Dash</a></li>
       <li> <a href="../heatmap/heatmap.html">🗺️ Mapa de calor </a></li>
       <li> <a href="../login/login.html">Sair</a></li>
     </ul>
