acento em "início"

--- a/Sprint2/Algoritmos/Site/index/index.html
+++ b/Sprint2/Algoritmos/Site/index/index.html
@@ -14,7 +14,7 @@
         <h1 class="titulo">FLOWTECH</h1>
     
       <ul class="navbar">
-          <li> <a style="text-decoration: underline;" href="#inicio">Inicio</a></li>
+          <li> <a style="text-decoration: underline;" href="#inicio">Início</a></li>
           <li>|</li>
           <li> <a href="#sobnos">Quem somos?</a></li>
           <li>|</li>
