--- a/Sprint2/Algoritmos/Site/Tela_Perfil/tela_perfil.html
+++ b/Sprint2/Algoritmos/Site/Tela_Perfil/tela_perfil.html
@@ -18,7 +18,7 @@
           <h1 class="titulo1">FLOWTECH</h1>
       
         <ul class="navbar1">
-            <li> <a href="../index/index.html">Inicio</a></li>
+            <li> <a href="../index/index.html">Início</a></li>
             <li>|</li>
             <li> <a style="text-decoration: underline;">Perfil</a></li>
             <li>|</li>
