--- a/Sprint2/Algoritmos/Site/dashboard/dashboard.html
+++ b/Sprint2/Algoritmos/Site/dashboard/dashboard.html
@@ -17,7 +17,7 @@
         <h1 class="titulo1">FLOWTECH</h1>
     
       <ul class="navbar1">
-          <li> <a href="../index/index.html">Inicio</a></li>
+          <li> <a href="../index/index.html">Início</a></li>
           <li>|</li>
           <li> <a href="../Tela_Perfil/tela_perfil.html">Perfil</a></li>
           <li>|</li>
