--- a/Sprint2/Algoritmos/Site/graficos/graficos.html
+++ b/Sprint2/Algoritmos/Site/graficos/graficos.html
@@ -19,7 +19,7 @@
         <h1 rel="stylesheet" href="../dashboard/Dash.css" class="titulo1">FLOWTECH</h1>
     
       <ul class="navbar1">
-          <li> <a href="../index/index.html">Inicio</a></li>
+          <li> <a href="../index/index.html">Início</a></li>
           <li>|</li>
           <li> <a href="../Tela_Perfil/tela_perfil.html">Perfil</a></li>
           <li>|</li>
