--- a/Sprint2/Algoritmos/Site/login/login.html
+++ b/Sprint2/Algoritmos/Site/login/login.html
@@ -19,7 +19,7 @@
             <h1 class="titulo1">FLOWTECH</h1>
         
           <ul class="navbar1">
-              <li> <a href="../index/index.html">Inicio</a></li>
+              <li> <a href="../index/index.html">Início</a></li>
               <li>|</li>
               <li> <a href="../index/index.html">Quem somos?</a></li>
               <li>|</li>
