--- a/Sprint2/Algoritmos/Site/privacidade/privacidade.html
+++ b/Sprint2/Algoritmos/Site/privacidade/privacidade.html
@@ -14,7 +14,7 @@
             <h1 class="titulo">FLOWTECH</h1>
         
           <ul class="navbar">
-              <li> <a href="../index/index.html">Inicio</a></li>
+              <li> <a href="../index/index.html">Início</a></li>
               <li>|</li>
               <li> <a href="../index/index.html#sobnos">Quem somos?</a></li>
               <li>|</li>
