padronizacao menu lateral

--- a/Sprint2/Algoritmos/Telas_Individuais/Tela_HeatMap/tela_heatmap.html
+++ b/Sprint2/Algoritmos/Telas_Individuais/Tela_HeatMap/tela_heatmap.html
@@ -29,14 +29,14 @@
                     <li>⚙️Configurações</li>
                     <li>🖥Calculadora Financeira</li>
                     <li>📞Contato</li>
-                    <li>🗺️Mapa de calor</li>
+                    <li>🗺️HeatMap</li>
                     <li>Sair</li>
                 </ul>
             </div>  
         </div>
         <div style="margin: 10px;">
             <div class="title2">
-                Mapa de Calor
+                HeatMap
             </div>
             <div>
                 FLOWTECH
