--- a/Sprint2/Algoritmos/Site/Tela_Perfil/tela_perfil.html
+++ b/Sprint2/Algoritmos/Site/Tela_Perfil/tela_perfil.html
@@ -39,7 +39,8 @@
           <ul class="listaItens">
             <li> <a href="../Simulador_Financeiro/simulador.html">🖥 Calculadora Financeira</a></li>
             <li> <a href="../graficos/graficos.html">📊 Gráficos</a></li>
-            <li> <a href="../dashboard/dashboard.html">🖥️ Dash</a></li>
+            <li> <a href="../dashboard/dashboard.html">🖥️ Dashboard</a></li>
+            <li> <a href="../heatmap/heatmap.html">🗺️ HeatMap </a></li>
             <li> <a href="../login/login.html">Sair</a></li>
           </ul>
         </div>
