--- a/Sprint2/Algoritmos/Site/dashboard/dashboard.html
+++ b/Sprint2/Algoritmos/Site/dashboard/dashboard.html
@@ -177,12 +177,12 @@
       estacao1.innerHTML = 'PINHEIROS';
       estacao2.innerHTML = 'HIGIENÓPOLIS';
       estacao3.innerHTML = 'PAULISTA';
-      quad6.innerHTML =  ' > 20.000'
-      quad5.innerHTML =  ' > 15.000'
-      quad4.innerHTML =  ' > 10.000'
-      quad3.innerHTML = ' > 8.000'
-      quad2.innerHTML = ' > 5.000'
-      quad1.innerHTML = ' > 3000'
+      quad6.innerHTML =  'Maior que 20.000'
+      quad5.innerHTML =  '15.000 à 19.999'
+      quad4.innerHTML =  '10.000 à 14.999'
+      quad3.innerHTML = '8.000 à 9.999'
+      quad2.innerHTML = '5.000 à 7.999'
+      quad1.innerHTML = '0 à 4.999'
 
       piscarD();
 
@@ -196,12 +196,12 @@
       estacao1.innerHTML = 'PAULISTA';
       estacao2.innerHTML = 'VILA SÔNIA';
       estacao3.innerHTML = 'PINHEIROS';
-      quad6.innerHTML = ' > 150.000'
-      quad5.innerHTML = ' > 100.000'
-      quad4.innerHTML = ' > 80.000'
-      quad3.innerHTML = ' > 10.000'
-      quad2.innerHTML = ' > 15.000'
-      quad1.innerHTML = ' > 20.000'
+      quad6.innerHTML = ' Maior que 150.000'
+      quad5.innerHTML = ' 100.000 à 149.999 '
+      quad4.innerHTML = ' 65.000 à 99.999 '
+      quad3.innerHTML = ' 40.000 à 64.999 '
+      quad2.innerHTML = ' 20.000 à 39.999 '
+      quad1.innerHTML = '0 à 19.999'
 
       piscarS()
 
@@ -217,12 +217,12 @@
       estacao1.innerHTML = 'LUZ';
       estacao2.innerHTML = 'BUTANTÃ';
       estacao3.innerHTML = 'OSCAR FREIRE';
-      quad6.innerHTML = ' > 600.000'
-      quad5.innerHTML = ' > 400.000'
-      quad4.innerHTML = ' > 300.000'
-      quad3.innerHTML = ' > 150.000'
-      quad2.innerHTML = ' > 100.000'
-      quad1.innerHTML = ' > 50.000'
+      quad6.innerHTML = 'Maior que 550.000'
+      quad5.innerHTML = '350.000 à 549.999'
+      quad4.innerHTML = '250.000 à 349.999'
+      quad3.innerHTML = '150.000 à 249.999'
+      quad2.innerHTML = '100.000 à 149.999'
+      quad1.innerHTML = '0 à 99.999'
 
       piscarM()
 
