--- a/Sprint2/Algoritmos/Site/login/login.html
+++ b/Sprint2/Algoritmos/Site/login/login.html
@@ -130,7 +130,7 @@
                 <input type="password" id="input_NovaSenha" class="NovaSenha" placeholder="Inserir Nova Senha" style="display: none;">
 
                 <div class="bts">
-                <button onclick="gerar()" class="cdg" id="bt_gerar">Gerar código</button>
+                <button onclick="gerar()" class="cdg" id="bt_gerar">Enviar código por email</button>
                 <button onclick="redefinir()" id="bt_redefinir_senha">Redefinir Senha</button>
                 <button onclick="salvar()" id="bt_salvar_senha" style="display: none;">Salvar Senha</button>
                 </div>
