subindo alterações de legenda

--- a/Sprint2/Algoritmos/Site/dashboard/dashboard.html
+++ b/Sprint2/Algoritmos/Site/dashboard/dashboard.html
@@ -118,13 +118,14 @@
 
   <center>
     <div class="legenda">
-      <div class="quadrados">
+      <div class="quadrado-primeiro">
         <div class="quadrado1"></div>
         <p id='quad1'> >3.000 </p>
         <div class="quadrado2"></div>
         <p id='quad2'> >5.000 </p>
         <div class="quadrado3"></div>
         <p id='quad3'> >8.000 </p>
+        <div class="quadrado-segundo">
         <div class="quadrado4"></div>
         <p id='quad4'> >10.000 </p>
         <div class="quadrado5"></div>
@@ -132,9 +133,10 @@
         <div class="quadrado6"></div>
         <p id='quad6'> >20.000 </p>
       </div>
+      </div>
 
       <div class="flecha">
-        <img src="../imagens/flecha_dash.png" alt="" width="500px">
+        <!-- <img src="../imagens/flecha_dash.png" alt="" width="500px"> -->
         <a href="../graficos/graficos.html"><button class="ver_mais" style="margin-left: 100%;">Ver Mais -></button></a>
       </div>
     </div>
