--- a/Sprint2/Algoritmos/Site/index/index.html
+++ b/Sprint2/Algoritmos/Site/index/index.html
@@ -83,9 +83,9 @@
     <div class="F2">
       <div class="link">
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="#inicio">Home</a></li>
                 
-          <li> Quem somos</li>
+          <li> <a href="#sobnos"> Quem somos </a></li>
           <li><a href="../Simulador_Financeiro/simulador.html">Simulador Financeiro</a></li>
         </ul>
         </div> 
