adicionando detalhes finais

--- a/Sprint2/Algoritmos/Site/Simulador_Financeiro/simulador.html
+++ b/Sprint2/Algoritmos/Site/Simulador_Financeiro/simulador.html
@@ -78,6 +78,8 @@
         </div> <br>`;
     }
 
+    //FUNÇÃO PARA LIMPAR AS OUTRAS SIMULAÇÕES E REALIZAR NOVAS
+
     function limpar() {
         cont = 0;
         div_mensagem.innerHTML = "";
