--- a/Sprint2/Algoritmos/Site/index/index.html
+++ b/Sprint2/Algoritmos/Site/index/index.html
@@ -70,6 +70,10 @@
   </div>
 </div>
 
+
+<!--------------FOOTER------------------------>
+  
+
 <div class="footer" id="contato">
   <div class="container">
     <div class="F1">
@@ -79,6 +83,10 @@
      <img class="insta" src="../imagens/instagram.png" alt="">
      <img class="telefone" src="../imagens/telefone.png" alt="">
     </div>
+
+
+
+
 
     <div class="F2">
       <div class="link">
