--- a/Sprint2/ArqComp/index.html
+++ b/Sprint2/ArqComp/index.html
@@ -40,9 +40,9 @@
                   <li>|</li>
                   <li> <a href="../Algoritmos/Site/dashboard/dashboard.html">Dashboard</a></li>
                   <li>|</li>
-                  <li> <a href="../Algoritmos/Site/graficos/graficos.html">Gráficos</a></li>
+                  <li> <a href="../Algoritmos/Site/graficos/graficos.html"><u>Gráficos</u></a></li>
                   <li>|</li>
-                  <li> <a" href="../Algoritmos/Site/heatmap/heatmap.html"><u>Heatmap</u></a></li>
+                  <li> <a href="../Algoritmos/Site/heatmap/heatmap.html">Heatmap</a></li>
               </ul>
             </div>
           </div>
