Mudanças na tela ao vivo

--- a/Sprint2/ArqComp/index.html
+++ b/Sprint2/ArqComp/index.html
@@ -239,6 +239,16 @@
         //     }
         // );
         /* -- chave */
+
+//         function clickMenu() {
+//     var itensLaterais = document.getElementById('itens-laterais');
+//     if (itensLaterais.style.display === 'block') {
+//       itensLaterais.style.display = 'none';
+//     } else {
+//       itensLaterais.style.display = 'block';
+//     }
+//   }
+
         var contextoChave = document.getElementById('chave').getContext('2d');
         contextoChave.canvas.width = 1000;
         contextoChave.canvas.height = 300;
