--- a/Sprint3/Site/web-data-viz/public/PAGES/heatmap/heatmap.html
+++ b/Sprint3/Site/web-data-viz/public/PAGES/heatmap/heatmap.html
@@ -82,38 +82,120 @@
 
 <script>
   var heatmapInstance = h337.create({
-    container: document.querySelector(".heatmap"),
-  });
+   container: document.querySelector(".heatmap"),
+ });
 
-    var points = [];
-    var max = 100;
-    var min = 0;
-    var width = 600;
-    var height = 346;
+   var points = [];
+   var max = 20;
+   var min = 0;
+   var width = 850;
+   var height = 490;
 
-    // Gerando um ponto por local da planta
-    var escada1 = { x: 185, y: 250, value: Math.floor(Math.random() * 101), radius: 40, };
-    var escada2 = { x: 190, y: 210, value: Math.floor(Math.random() * 101), radius: 40, };
-    var escada3 = { x: 380, y: 230, value: Math.floor(Math.random() * 101), radius: 40, };
-    var passarela1 = { x: 340, y: 265, value: Math.floor(Math.random() * 101), radius: 40, };
-    var passarela2 = { x: 440, y: 180, value: Math.floor(Math.random() * 101), radius: 40, };
-    var catraca = { x: 500, y: 100, value: Math.floor(Math.random() * 101), radius: 40, };
 
-    points = points.concat(escada1, escada2, escada3, passarela1, passarela2, catraca);
 
-    var data = {
-      max: max,
-      min: min,
-      data: points,
-    }
-    heatmapInstance.setData(data);
+ function clickMenu() {
+   var itensLaterais = document.getElementById('itens-laterais');
+   if (itensLaterais.style.display === 'block') {
+     itensLaterais.style.display = 'none';
+   } else {
+     itensLaterais.style.display = 'block';
+   }
+ }
 
-  function clickMenu() {
-    var itensLaterais = document.getElementById('itens-laterais');
-    if (itensLaterais.style.display === 'block') {
-      itensLaterais.style.display = 'none';
-    } else {
-      itensLaterais.style.display = 'block';
-    }
-  }
+
+ window.onload = function () {
+   atualizarFeed();
+   slideOne();
+   slideTwo();
+ };
+
+ let sliderOne = document.getElementById("slider-1");
+ let sliderTwo = document.getElementById("slider-2");
+ let displayValOne = document.getElementById("range1");
+ let displayValTwo = document.getElementById("range2");
+ let minGap = 0;
+ let sliderTrack = document.querySelector(".slider-track");
+ let sliderMaxValue = document.getElementById("slider-1").max;
+
+function slideOne() {
+ if (parseInt(sliderTwo.value) - parseInt(sliderOne.value) <= minGap) {
+   sliderOne.value = parseInt(sliderTwo.value) - minGap;
+ }
+ displayValOne.textContent = sliderOne.value + ':00';
+ fillColor();
+}
+
+function slideTwo() {
+ if (parseInt(sliderTwo.value) - parseInt(sliderOne.value) <= minGap) {
+   sliderTwo.value = parseInt(sliderOne.value) + minGap;
+ }
+ displayValTwo.textContent = sliderTwo.value + ':00';
+ fillColor();
+}
+
+function fillColor() {
+ percent1 = (sliderOne.value / sliderMaxValue) * 100;
+ percent2 = (sliderTwo.value / sliderMaxValue) * 100;
+ sliderTrack.style.background = `linear-gradient(to right, #dadae5 ${percent1}% , #3264fe ${percent1}% , #3264fe ${percent2}%, #dadae5 ${percent2}%)`;
+}
+
+
+var intervalo = []
+
+function atualizarFeed() {
+       var h1 = document.getElementById("slider-1").value;
+       var h2 = document.getElementById("slider-2").value;
+
+         if(h1.length == 1){
+           h1 = '0' + h1;
+         }
+         if(h2.length == 1){
+           h2 = '0' + h2;
+         }
+
+       fetch(`/avisos/listar/${h1}/${h2}`).then(function (resposta) {
+           if (resposta.ok) {
+               if (resposta.status == 204) {
+                   throw "Nenhum resultado encontrado!!";
+               }
+
+               resposta.json().then(function (resposta) {
+                   console.log("Dados recebidos: ", JSON.stringify(resposta));
+                   console.log("A resposta do banco foi: " + resposta);
+
+   // =========================================================================
+
+   var dado = resposta.contagem;
+
+   var dif = h2 - h1;
+
+   var escada1 = { x: 237 - 85, y: 350 + 10, value: dado * 0.7, radius: 40, };
+   var escada2 = { x: 265 - 85, y: 300 + 10, value: dado * 0.9, radius: 40, };
+   var escada3 = { x: 545 - 95, y: 345, value: dado, radius: 40, };
+   var passarela1 = { x: 515 - 85, y: 370 + 10, value: dado * 1.2, radius: 40, };
+   var passarela2 = { x: 620 - 85, y: 250 + 5, value: dado * 1, radius: 40, };
+   var catraca = { x: 690 - 90, y: 172 + 10, value: dado * 0.8, radius: 40, };
+
+   points = [escada1, escada2, escada3, passarela1, passarela2, catraca];
+
+   var data = {
+     max: max + max * dif,
+     min: min,
+     data: points,
+   }
+
+   heatmapInstance.setData(data);
+
+   // ========================================================================
+
+               });
+           } else {
+               throw ('Houve um erro na API!');
+           }
+       }).catch(function (resposta) {
+           console.error(resposta);
+
+       });
+   }
+
 </script>
